tests/core/ill-typed/extra-tests/multiparameter-functions/bad-logic-or-1.stella
language core;

extend with #multiparameter-functions, #logical-operators;

fn or_fn(n : Bool, m : Nat) -> Bool {
    return n or m
}

fn main(n : Nat) -> Bool {
  return or_fn(true, n)
}
